Finished styling the settings/profile page. Fixed main hamburger menu by adding missing options and expanding height of dropdown so as not to cut off any options.

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,11 @@ ul
 {
     color: #FFFFFF;
 }
+.navbar-fixed-bottom .navbar-collapse,
+.navbar-fixed-top .navbar-collapse
+{
+  max-height: 440px;
+}
 #main-nav > div > ul > li > a:hover
 {
     background-color: #326077;
@@ -415,7 +420,10 @@ input:-webkit-autofill {
 }
 #profile #profile-header #btn-edit-risks,
 #profile #profile-header #btn-edit-exercise,
-#profile #profile-header #btn-edit-tastes
+#profile #profile-header #btn-edit-tastes,
+#profile #my-risks,
+#profile #my-exercise,
+#profile #my-tastes
 {
 	display: none;
 }
@@ -426,8 +434,9 @@ input:-webkit-autofill {
 #profile #user-allergy,
 #profile #user-health
 {
-	border: 1px solid rgb(169, 169, 169);
+	border: 1px solid#326077;
 	cursor: default;
+	margin-bottom: 0px;
 	-webkit-user-select: none;
 }
 #profile #user-allergy li,
@@ -469,6 +478,7 @@ input:-webkit-autofill {
 	padding: 0px;
 	width: 100%;
 }
+#profile #my-risks select,
 #profile #my-exercise input[type="password"]
 {
 	margin-top: 25px;
